<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundActivity"
    tools:context=".activity.EditActivity">

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/hint_title"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textColor="@color/grey_darker"
        android:textColorHint="@color/grey_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_add_date"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edDesc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_desc"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textColor="@color/grey_darker"
        android:textColorHint="@color/grey_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toBottomOf="@+id/edTitle"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.8"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:onClick="btSendBd"
        app:backgroundTint="?attr/circleButtonSaveColor"
        app:borderWidth="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edDesc"
        app:layout_constraintEnd_toEndOf="@+id/edDesc"
        app:srcCompat="@drawable/ic_save"
        app:tint="@null"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/bt_add_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="11dp"
        android:clickable="false"
        android:text="@string/add_date_start"
        android:textSize="20sp"
        android:backgroundTint="?attr/backgroundTintButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>