<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txSelectionDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/backgroundText"
            android:paddingStart="24dp"
            android:paddingTop="2dp"
            android:paddingEnd="0dp"
            android:paddingBottom="2dp"
            android:text="@string/text_date_calendarActivity"
            android:textColor="?attr/colorTextDate"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundCalendar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainRcView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:touchscreenBlocksFocus="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txSelectionTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/backgroundText"
                android:paddingStart="24dp"
                android:paddingTop="2dp"
                android:paddingEnd="0dp"
                android:paddingBottom="2dp"
                android:text="@string/text_time_calendarActivity"
                android:textColor="?attr/colorTextDate"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:alpha="0.8"
            android:backgroundTint="?attr/circleButtonPaddingColor"
            android:clickable="true"
            android:contentDescription="@string/add_note"
            android:focusable="true"
            android:onClick="onClickNew"
            app:backgroundTint="?attr/circleButtonMarginColor"
            app:borderWidth="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add"
            app:tint="@null" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>